Small style changes, working on fixing posts but still stuck

--- a/src/app/components/Socialbar/Socialbar.module.css
+++ b/src/app/components/Socialbar/Socialbar.module.css
@@ -2,6 +2,15 @@
     margin-bottom: 13px;
 }
 
+.githubIcon:hover {
+    opacity: 30%;
+}
+
 .linkedinIcon {
     margin-top: 10px;
+}
+
+
+.linkedinIcon:hover {
+    opacity: 30%;
 }
